Store login name in cookie.

--- a/views/room.jade
+++ b/views/room.jade
@@ -2,6 +2,7 @@
 html(lang="en")
   head
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
+    script(src="jquery.cookie.js")
     script(src="jquery.dateFormat-1.0.js")
     script(src="/socket.io/socket.io.js")
     script(src="room.js")
