--- a/public/app.css
+++ b/public/app.css
@@ -49,7 +49,6 @@ html, body {
   margin:5px;
   color:#fff;
   background:#075698; /* default background for browsers without gradient support */
-  /* css3 */
   background:-webkit-gradient(linear, 0 0, 0 100%, from(#2e88c4), to(#075698));
   background:-moz-linear-gradient(#2e88c4, #075698);
   background:-o-linear-gradient(#2e88c4, #075698);
@@ -58,7 +57,6 @@ html, body {
   -moz-border-radius:10px;
   border-radius:10px;
   margin-left:40px;
-  background:#075698;
 }
 .bubble:after {
   content:"";
@@ -76,4 +74,11 @@ html, body {
   bottom:auto;
   border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
   border-color:transparent #075698; 
+}
+.bubble.odd {
+  background:#2e88c4; /* default background for browsers without gradient support */
+  background:-webkit-gradient(linear, 0 0, 0 100%, from(#6da1c4), to(#2e88c4));
+  background:-moz-linear-gradient(#6da1c4, #2e88c4);
+  background:-o-linear-gradient(#6da1c4, #2e88c4);
+  background:linear-gradient(#6da1c4, #2e88c4);
 }
